--- a/resume.tex
+++ b/resume.tex
@@ -31,8 +31,8 @@
 %     TITLE NAME
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\namesection{Samuel}{Luo}{I am a software engineer focusing on backend development, \\
-having enthusiasm for researching the latest technology.}
+\namesection{Samuel}{Luo}{More than 1.5 year of experience in JAVA \& Linux, \\
+enjoy to work with different roles and share knowledge with others.}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
@@ -40,7 +40,7 @@ having enthusiasm for researching the latest technology.}
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{minipage}[t]{0.3\textwidth} 
+\begin{minipage}[t]{0.31\textwidth} 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     INFO
@@ -50,7 +50,7 @@ having enthusiasm for researching the latest technology.}
 Phone: 0978-827-795 \\
 Email: viridis959@gmail.com \\
 Github: \href{https://github.com/viridis959}{\underline{viridis959}} \\
-LinkedIn: \href{https://www.linkedin.com/in/samuel-luo-9b15671b5}{\underline{Samuel Luo}}
+LinkedIn: \href{https://www.linkedin.com/in/samuelluo1}{\underline{Samuel Luo}}
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -58,27 +58,11 @@ LinkedIn: \href{https://www.linkedin.com/in/samuel-luo-9b15671b5}{\underline{Sam
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{EDUCATION} 
-\descript{National Chengchi University}
-\descript{Management Information Systems}
-\descript{Bachelor's degree}
-\location{July 2017 - June 2021}
-2021 Presidential Award \\
-Cum. GPA: 3.66 / 4.0
-\sectionsep
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     LAB
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\section{LABS}
-\descript{MIT}
-Operating System (C) \\
-Database Systems (JAVA)
-\sectionsep
-
-\descript{CMU}
-Intro to Computer Systems (C) \\
-Distributed Systems (C \& JAVA)
+{\bf National Chengchi University} \\
+Management Information Systems \\
+Bachelor's degree \\
+July 2017 - June 2021 \\
+Presidential Award * 1
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -87,13 +71,17 @@ Distributed Systems (C \& JAVA)
 
 \section{SKILLS}
 \descript{Programming Language}
-Java \\ Python \\Shell \\ \LaTeX\
+Java \\ Python \\ SQL \\ Shell
 \sectionsep
 
-\descript{Technologies \& Tools}
-Linux \\ Spring \\ Struts2 \\ JUnit \\ 
-Maven \\ RDBMS \\ Git \\ Docker \\ Kubernetes \\ 
-Katalon \\ Azure Devops \\ Aliyun
+\descript{Framework}
+Spring Boot \\ Struts2 \\ JUnit \\ Katalon
+\sectionsep
+
+\descript{Technologies}
+Git \\ Redis \\ Message Queue \\
+Linux \\ Docker \\ Kubernetes \\ 
+Microsoft Azure \\ Aliyun
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
@@ -103,7 +91,7 @@ Katalon \\ Azure Devops \\ Aliyun
 
 \end{minipage} 
 \hfill
-\begin{minipage}[t]{0.69\textwidth} 
+\begin{minipage}[t]{0.68\textwidth} 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     EXPERIENCE
@@ -111,50 +99,43 @@ Katalon \\ Azure Devops \\ Aliyun
 
 \section{EXPERIENCE}
 \descript{WPG Holdings Limited | Backend Engieer}
-\location{Aug 2021 – Present}
+Aug 2021 – Present \\
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightemize}
-\item Large Enterprise / {\bf Scrum} Team
-\item Migrated backend framework of the main website from {\bf Struts2} to {\bf Spring Boot}.
-\item Researched and used features of JAVA \& Spring to improve the code. \\ 
-      (POJO, Builder, Constructor Overloading, Spring Session Data Redis...)
-\item Created {\bf CI / CD} pipelines to simplify deploy process. ({\bf Azure DevOps})
-\item Used {\bf Docker} to containerized the main service. (JAVA \& Gradle \& Tomcat)
-\item Researched and integrated {\bf Azure DevOps} with {\bf Aliyun K8s}.
-\item Developed automated End-to-End testing using Katalon.
+\item {\bf Skills}: Java · SQL · Git · Linux · Redis · Message Queue · Microsoft Azure · Alibaba Cloud · Kubernetes · CI/CD · Katalon · Scrum
+\item Conducted 5+ {\bf sharing sessions}, e.g.,cache and API document. \\
+\item {\bf Introduced unit test} and made it in code review process.
+\item Researched how {\bf Tomcat} works to solve deployment errors.
+\item Performed {\bf local cache \& Redis} to improve performance. \\
+\item Migrated the apps to {\bf K8s } and wrote operations guide for the team.
+\item Migrated the {\bf Struts2} project to {\bf Spring Boot} and refactored the database to reduce coupling.
+\item Connected third party APIs, e.g.,OAuth2, data team, censorship.
 \end{tightemize}
 \sectionsep
 
 \descript{Data Yoo Application CO., Ltd. | Software Engineer Intern}
-\location{Sep 2020 – Mar 2021}
+Sep 2020 – Mar 2021
 \begin{tightemize}
-\item Startup / Fast Pace
-\item Learned and used {\bf OOP} \& {\bf design pattern} to improve the code. ({\bf Spring Boot})
-\item Developed another display way of table to resolve {\bf jQuery} RWD problems.
-\item Developed a new system to help debugging \& marketing.
-\item Communicated with data scientists \& PM to develop LINE Bot. ({\bf Django})
-\item Maintained web crawlers and developed new ones in need. ({\bf Python})
-\end{tightemize}
-\sectionsep
-
-\descript{Graduation Project | Main Developer}
-\location{Feb 2020 – Dec 2020}
-\begin{tightemize}
-\item Designed the architecture of the system. ({\bf Vue} \& {\bf Django} \& JSON)
-\item Researched and introduced tools to others. (Vue CLI \& Git \& Heroku)
-\item Transfered marcom's opinions to a To-Do List and refered to it for development.
+\item Skills: Java · Python · JavaScript · SQL · Linux · Git
+\item Collaborated with project managers, data analysts and a UI designer. \\
+\item Used OOP and design patterns to write clean code for main projects. \\
+\item Resolved RWD problems in jQuery to improve user experience. \\
+\item Maintained 15+ web crawlers and builded email notifications for them. \\
+\item Developed a new information system to help marketing decision making.
 \end{tightemize}
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     SPECIAL PROJECT
+%     SPECIAL
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{SPECIAL PROJECT}
-\descript{Title}
-\location{ 2021 – Present}
-description
+\section{SPECIAL}
+\descript{Winner in IT Hackathon | Dec 2021}
+Developed a recommendation system using elasticsearch.
 \sectionsep
+
+\descript{Main Developer in Graduation Project | Feb 2020 – Dec 2020}
+Designed and implemented the system architecture for the team. (Vue.js \& Django \& Heroku)
 
 \end{minipage} 
 \end{document}  \documentclass[]{article}
